@@ -4,7 +4,12 @@ package edu.colorado.phet.fluidpressureandflow.common.model.units;
 import java.text.DecimalFormat;
 
 import static edu.colorado.phet.fluidpressureandflow.FluidPressureAndFlowResources.Strings.*;
-import static edu.colorado.phet.fluidpressureandflow.common.model.units.Units.*;
+import static edu.colorado.phet.fluidpressureandflow.common.model.units.Units.FEET;
+import static edu.colorado.phet.fluidpressureandflow.common.model.units.Units.FEET_PER_METER;
+import static edu.colorado.phet.fluidpressureandflow.common.model.units.Units.FEET_PER_SECOND;
+import static edu.colorado.phet.fluidpressureandflow.common.model.units.Units.KILOPASCAL;
+import static edu.colorado.phet.fluidpressureandflow.common.model.units.Units.METERS;
+import static edu.colorado.phet.fluidpressureandflow.common.model.units.Units.METERS_PER_SECOND;
 import static edu.colorado.phet.fluidpressureandflow.common.model.units.Units.PSI;
 
 /**
@@ -38,7 +43,7 @@ public class UnitSet {
     //Same as ft/s -> m/s, same as converting feet to meters
 
     //Common unit sets which the user can select
-    public static final UnitSet ATMOSPHERES = new UnitSet( Units.ATMOSPHERE, METERS_PER_SECOND, FEET, FLUID_DENSITY_METRIC, FLUX_METRIC, AREA_METRIC, RATE_METRIC, GRAVITY_METRIC );//Metric units but with atmospheres for pressure instead of psi
+    public static final UnitSet ATMOSPHERES = new UnitSet( Units.ATMOSPHERE, METERS_PER_SECOND, METERS, FLUID_DENSITY_METRIC, FLUX_METRIC, AREA_METRIC, RATE_METRIC, GRAVITY_METRIC );//Metric units but with atmospheres for pressure instead of psi
     public static final UnitSet ENGLISH = new UnitSet( PSI, FEET_PER_SECOND, FEET, FLUID_DENSITY_ENGLISH, FLUX_ENGLISH, AREA_ENGLISH, RATE_ENGLISH, GRAVITY_ENGLISH );
     public static final UnitSet METRIC = new UnitSet( KILOPASCAL, METERS_PER_SECOND, METERS, FLUID_DENSITY_METRIC, FLUX_METRIC, AREA_METRIC, RATE_METRIC, GRAVITY_METRIC );
 
