@@ -1,15 +1,14 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.fluidpressureandflow.flow.view;
 
-import java.awt.BasicStroke;
-import java.awt.Color;
-import java.awt.Shape;
+import java.awt.*;
 import java.awt.geom.AffineTransform;
 import java.awt.geom.Line2D;
 import java.text.DecimalFormat;
 
 import edu.colorado.phet.common.phetcommon.model.property.Not;
 import edu.colorado.phet.common.phetcommon.model.property.ObservableProperty;
+import edu.colorado.phet.common.phetcommon.model.property.Or;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
 import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
@@ -20,7 +19,10 @@ import edu.colorado.phet.fluidpressureandflow.common.model.units.Units;
 import edu.colorado.phet.fluidpressureandflow.pressure.model.Pool;
 import edu.umd.cs.piccolo.PNode;
 
-import static edu.colorado.phet.fluidpressureandflow.FluidPressureAndFlowResources.Strings.*;
+import static edu.colorado.phet.fluidpressureandflow.FluidPressureAndFlowResources.Strings.READOUT_FEET;
+import static edu.colorado.phet.fluidpressureandflow.FluidPressureAndFlowResources.Strings.READOUT_FOOT;
+import static edu.colorado.phet.fluidpressureandflow.FluidPressureAndFlowResources.Strings.READOUT_METER;
+import static edu.colorado.phet.fluidpressureandflow.FluidPressureAndFlowResources.Strings.READOUT_METERS;
 import static java.text.MessageFormat.format;
 
 /**
@@ -33,14 +35,15 @@ public class NumberedGridNode extends PropertyVisibleNode {
         super( visible );
 
         //Show meters if in metric
-        addChild( new PropertyVisibleNode( units.valueEquals( UnitSet.METRIC ) ) {{
+        Or showMetric = units.valueEquals( UnitSet.METRIC ).or( units.valueEquals( UnitSet.ATMOSPHERES ) );
+        addChild( new PropertyVisibleNode( showMetric ) {{
             for ( int i = 0; i >= -10; i-- ) {
                 addChild( new LineNode( format( i == -1 ? READOUT_METER : READOUT_METERS, new DecimalFormat( "0" ).format( -i ) ), i, transform ) );
             }
         }} );
 
         //Show feet if non-metric
-        addChild( new PropertyVisibleNode( new Not( units.valueEquals( UnitSet.METRIC ) ) ) {{
+        addChild( new PropertyVisibleNode( new Not( showMetric ) ) {{
             for ( int i = 0; i >= -10; i-- ) {
                 addChild( new LineNode( format( i == -1 ? READOUT_FOOT : READOUT_FEET, new DecimalFormat( "0" ).format( -i ) ), Units.feetToMeters( i ), transform ) );
             }
